--- a/META.yml
+++ b/META.yml
@@ -3,11 +3,12 @@ abstract: 'A lightweight field hash implementation'
 author:
   - 'Goro Fuji <gfuji(at)cpan.org>.'
 build_requires:
+  Test::LeakTrace: 0.07
   Test::More: 0.62
 configure_requires:
   ExtUtils::MakeMaker: 6.44
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.79'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -22,4 +23,4 @@ requires:
   perl: 5.8.1
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.04
+version: 0.05
