--- a/META.yml
+++ b/META.yml
@@ -4,16 +4,19 @@ author:
   - 'Goro Fuji <gfuji(at)cpan.org>.'
 build_requires:
   ExtUtils::MakeMaker: 6.42
+  ExtUtils::ParseXS: 2.21
   Test::LeakTrace: 0.07
   Test::More: 0.62
 configure_requires:
+  Devel::PPPort: 3.19
   ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.88'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
+module_name: Hash::FieldHash
 name: Hash-FieldHash
 no_index:
   directory:
@@ -22,8 +25,9 @@ no_index:
     - t
     - xt
 requires:
-  Exporter: 5.57
-  perl: 5.8.1
+  XSLoader: 0.1
+  perl: 5.8.5
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.08
+  repository: git://github.com/gfx/Perl-Hash-FieldHash.git
+version: 0.09
