Import of GFUJI/Hash-FieldHash-0.10 from CPAN.
gitpan-cpan-distribution: Hash-FieldHash
gitpan-cpan-version:      0.10
gitpan-cpan-path:         GFUJI/Hash-FieldHash-0.10.tar.gz
gitpan-cpan-author:       GFUJI
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -26,8 +26,9 @@ no_index:
     - xt
 requires:
   XSLoader: 0.1
+  parent: 0.221
   perl: 5.8.5
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/gfx/Perl-Hash-FieldHash.git
-version: 0.09
+version: 0.10
