--- a/META.yml
+++ b/META.yml
@@ -1,17 +1,18 @@
 ---
-abstract: 'A lightweight field hash implementation'
+abstract: 'Lightweight field hash for inside-out objects'
 author:
-  - 'Goro Fuji <gfuji(at)cpan.org>.'
+  - 'Fuji, Goro (gfx) <gfuji(at)cpan.org>.'
 build_requires:
+  Devel::PPPort: 3.19
   ExtUtils::MakeMaker: 6.42
-  ExtUtils::ParseXS: 2.21
   Test::LeakTrace: 0.07
   Test::More: 0.62
 configure_requires:
   Devel::PPPort: 3.19
   ExtUtils::MakeMaker: 6.42
+  ExtUtils::ParseXS: 2.21
 distribution_type: module
-generated_by: 'Module::Install version 0.91'
+generated_by: 'Module::Install version 1.02'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -25,10 +26,10 @@ no_index:
     - t
     - xt
 requires:
-  XSLoader: 0.1
+  XSLoader: 0.02
   parent: 0.221
   perl: 5.8.5
 resources:
   license: http://dev.perl.org/licenses/
-  repository: git://github.com/gfx/Perl-Hash-FieldHash.git
-version: 0.10
+  repository: git://github.com/gfx/p5-Hash-FieldHash.git
+version: 0.11
