--- a/META.yml
+++ b/META.yml
@@ -4,32 +4,44 @@ author:
   - 'Fuji, Goro (gfx) <gfuji(at)cpan.org>.'
 build_requires:
   Devel::PPPort: 3.19
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.59
+  ExtUtils::ParseXS: 2.21
   Test::LeakTrace: 0.07
   Test::More: 0.62
 configure_requires:
-  Devel::PPPort: 3.19
-  ExtUtils::MakeMaker: 6.42
-  ExtUtils::ParseXS: 2.21
-distribution_type: module
-generated_by: 'Module::Install version 1.02'
+  CPAN::Meta: 0
+  CPAN::Meta::Prereqs: 0
+  Module::Build: 0.38
+dynamic_config: 0
+generated_by: 'Minilla/v0.0.53, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
   version: 1.4
-module_name: Hash::FieldHash
 name: Hash-FieldHash
 no_index:
   directory:
-    - example
-    - inc
     - t
     - xt
+    - inc
+    - share
+    - eg
+    - examples
+    - author
+provides:
+  Hash::FieldHash:
+    file: lib/Hash/FieldHash.pm
+    version: 0.13
 requires:
   XSLoader: 0.02
   parent: 0.221
-  perl: 5.8.5
+  perl: 5.008005
 resources:
-  license: http://dev.perl.org/licenses/
+  bugtracker: https://github.com/gfx/p5-Hash-FieldHash/issues
+  homepage: https://github.com/gfx/p5-Hash-FieldHash
   repository: git://github.com/gfx/p5-Hash-FieldHash.git
-version: 0.12
+version: 0.13
+x_contributors:
+  - 'gfx <gfuji@cpan.org>'
+  - 'Fuji Goro <fuji.goro@dena.jp>'
+  - 'Fuji, Goro <g.psy.va@gmail.com>'
